# Xray_AI4R_SystemProject

./: .editorconfig  .gitattributes  .gitignore  README.md
install/: build_pico_workspace.sh  build_ros_workspace.sh  depthai_v2_list_dependencies.sh  flash_picos.sh  install_v2025-09.sh  reboot_picos.sh
mcu_ws/: CMakeLists.txt  HighLowDurationReader.pio  PwmIn.pio  ai4r-sensors-rp1.cpp  ai4r-sensors-rp2.cpp  ai4r-sensors-rp3.cpp  ai4r-sensors-rp4.cpp  readserialcommand.cpp  writeserialcommand.cpp  ws2812.pio
mcu_ws/BNO08x_Pico_Library/src/: bno08x.cpp
mcu_ws/pico_servo/: CMakeLists.txt  README.md  pico_servo.c  pico_servo.h
ros2_ws/src/ai4r_interfaces/: CMakeLists.txt
ros2_ws/src/ai4r_interfaces/msg/: TofSensor.msg
ros2_ws/src/ai4r_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/ai4r_pkg/config/: traxxas_node_params.yaml
ros2_ws/src/ai4r_pkg/drivers/src/vl53l5cx/: vl53l5cx.h
ros2_ws/src/ai4r_pkg/drivers/src/vl53l5cx/VL53L5CX_ULD_API/inc/: vl53l5cx_api.h
ros2_ws/src/ai4r_pkg/drivers/src/vl53l5cx/VL53L5CX_ULD_API/src/: vl53l5cx_plugin_xtalk.c
ros2_ws/src/ai4r_pkg/drivers/src/vl53l5cx/platform/: vl53l5cx_platform.c
ros2_ws/src/ai4r_pkg/include/ai4r_pkg/: traxxas_node.hpp
ros2_ws/src/ai4r_pkg/launch/: policy_launch.py  traxxas_launch.py  vl53l5cx_launch.py
ros2_ws/src/ai4r_pkg/scripts/: cone_detector_node.py  cone_detector_node_old.py  path_prediction.py  policy_node.py  policy_node_old.py  test_steering_commander.py
ros2_ws/src/ai4r_pkg/src/: rp2_bridge_node.cpp  sensor_pcb_parser.cpp  traxxas_node.cpp  vl53l5cx_node.cpp
web_interface/foxglove_ui/: AI4R_UI.json
